# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  raytracing.hpp  sphere.hpp  vec3.hpp
src/: main.cpp
